--- a/public/css/ech-blog-cates-tags-list.css
+++ b/public/css/ech-blog-cates-tags-list.css
@@ -4,6 +4,14 @@
 } */
 
 
+.entry-header .entry-title {
+    display: none;
+}
+
+.ech_blog_cate_tags_all_wrap a {
+    text-decoration: none;
+}
+
 .ech_blog_cate_tags_all_wrap {
     max-width: 1440px;
     width: 100%;
